--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 
     <!-- Container -->
-    <div class="container-fluid">
+    <div class="container-fluid p-0">
         <!-- Header Section -->
         <header class="header">
             <!-- Navigation with a burger menu -->
@@ -54,14 +54,56 @@
                 </div>
             </nav>
             <!-- Hero Section -->
-            <div class="jumbotron">
-                <h1 class="display-4">Ynovagroup</h1>
-                <p class="lead">Nous sommes un groupement de pharmaciens indépendants à votre service.</p>
-                <p class="lead">
-                    <a class="btn btn-success btn-sm" href="#" role="button">En savoir plus</a>
-                </p>
-            </div>
+            <section id="hero" src="{{ asset('images/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
+                <div class="jumbotron-fluid container-fluid text-center">
+                    <h1 class="display-4 text-uppercase">Ynovagroup</h1>
+                    <p class="lead">Nous sommes un groupement de pharmaciens indépendants à votre service.</p>
+                    <p class="lead">
+                        <a class="btn btn-success btn-sm p-2" href="#valeurs" role="button">En savoir plus</a>
+                    </p>
+                </div>
+            </section>
         </header>
+        <!-- Main Section -->
+        <main class="main container-fluid p-0">
+            <!-- Citation Section -->
+            <section class="container-fluid p-0">
+            
+            </section>
+            <!-- Nos Valeurs Section -->
+            <section class="container-fluid p-0">
+            
+            </section>
+            <!-- Notre Différence Section -->
+            <section class="container-fluid p-0">
+            
+            </section>
+            <!-- Nos Objectifs Section -->
+            <section class="container-fluid p-0">
+            
+            </section>
+            <!-- Contact Section -->
+            <section class="container-fluid p-0">
+            
+            </section>
+        </main>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer-dl m-5 text-center">
+                <h6 class="h6 text-uppercase">Téléchargez notre plaquette</h6>
+                <a href="http://www.ynovagroup.com/Plaquette/Plaquette_YnovaGroup.pdf" class="m-3" id="plaquette">
+                    <i class="fa fa-download fa-4x m-4" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="footer-infos m-5 text-center">
+                <h6 class="h6 text-uppercase">Contact</h6>
+                <div class="footer-infos-element">
+                    <a id="mail" href="mailto:contact@ynovagroup.com" class="p-3">contact@ynovagroup.com</a>
+                    <a id="tel" href="tel:+33134205268" class="p-3">+33 (0)1 34 20 52 68</a>
+                </div>    
+            </div>
+        </footer>
+
     </div>
 
 {% endblock %}
