--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -224,39 +224,57 @@
                 <div class="container-fluid p-0 text-center m-5">
                 <h2 class="titre h1-responsive font-weight-bold m-5">Nos objectifs</h2>
                     <div class="panel">
-                        <div class="panel-box">
-                            <div class="panel-box-text m-3">
+                        <div class="panel-box m-5">
+                            <div class="panel-box-text m-5">
                                 <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Écoute et disponibilité
+                                    <i class="far fa-check-square fa-1x"></i>
+                                    La relation au patient-client
                                 </h4>
-                                <p class="font-weight-lighter m-5">Un interlocuteur proche de vous pour pérenniser le dynamisme de votre officine</p>
+                                <ul class="font-weight-lighter m-5">
+                                    <li>Capter de nouveaux clients</li>
+                                    <li>Fidéliser la clientèle</li>
+                                    <li>Augmenter le panier moyen</li>
+                                </ul>
                             </div>
-                            <div class="panel-box-text m-3">
-                                <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Une offre complète
+                            <div class="panel-box-text m-5">
+                               <h4 class="h4-responsive font-weight-bold">
+                                    <i class="far fa-check-square fa-1x"></i>
+                                    La politique commerciale
                                 </h4>
-                                <p class="font-weight-lighter m-5">Une intervention sur les 4 dimensions clé de l'officine</p>
+                                <ul class="font-weight-lighter m-5">
+                                    <li>Définir votre stratégie commerciale</li>
+                                    <li>Rendrez votre espace de vente plus attractif</li>
+                                    <li>Maximiser le potentiel de votre référencement produit</li>
+                                    <li>Dynamiser quotidiennement votre officine</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="panel">
                         <div class="panel-box">
-                            <div class="panel-box-text m-3">
+                            <div class="panel-box-text m-5">
                                 <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Répondre à vos problématiques spécifiques
+                                    <i class="far fa-check-square fa-1x"></i>
+                                    L'optimisation des achats
                                 </h4>
-                                <p class="font-weight-lighter m-5">Votre conseiller vous accompagne pour mettre en place un plan d'action personnalisé</p>
+                                <ul class="font-weight-lighter m-5">
+                                    <li>Accords grossistes à des conditions préférentielles</li>
+                                    <li>Accords génériqueurs attractifs</li>
+                                    <li>Achats VIP</li>
+                                    <li>Laboratoires partenaires parmi les leaders</li>
+                                </ul>
                             </div>
-                            <div class="panel-box-text m-3">
+                            <div class="panel-box-text m-5">
                                 <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Toute votre équipe au ceur de nos préoccupations
+                                    <i class="far fa-check-square fa-1x"></i>
+                                    La formation de l'équipe officinale
                                 </h4>
-                                <p class="font-weight-lighter m-5">Une approche innovante de la formation et des supports techniques éprouvés</p>
-                            </div>
+                                <ul class="font-weight-lighter m-5">
+                                    <li>Accompagnement au quotidien</li>
+                                    <li>Formation en équipe</li>
+                                    <li>Mise à disposition de fiches pratiques</li>
+                                    <li>Coaching individuel en situation</li>
+                                </ul>
                         </div>
                     </div>    
                 </div>  
