début intégration backend

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -39,7 +39,7 @@ body {
 }
 
 #hero > div > h1 {
-    font-weight: bolder;
+    font-weight: bold;
     letter-spacing: 3px;
     color: var(--green);
 }
