--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -5,51 +5,61 @@
 {% block body %}
     <h1>Liste des sociétés</h1>
 
-    <table class="table">
+<div class="card p-4">
+    <table id="companyTable" class="table table-hover table-striped w-100">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>#</th>
                 <th>Nom</th>
-                <th>Premier champ d'adresse</th>
-                <th>Second champ d'adresse</th>
-                <th>Ville</th>
+                <th>Adresse</th>
+                <th>Complément d'adresse</th>
                 <th>Code postal</th>
-                <th>Pays</th>
-                <th>Description</th>
+                <th>Ville</th>
                 <th>Photo de la pharmacie</th>
-                <th>Utilisateur rattaché</th>
-                {# <th>Commercial rattaché</th> #}
-                <th>Société active</th>
-
+                <th>Utilisateur</th>
+                <th>Commercial</th>
+                <th>Actif</th>
             </tr>
         </thead>
         <tbody>
-        {% for company in companys %}
-            <tr>
-                <td>{{ company.id }}</td>
-                <td>{{ company.name }}</td>
-                <td>{{ company.firstAdressField }}</td>
-                <td>{{ company.secondAdressField }}</td>
-                <td>{{ company.city }}</td>
-                <td>{{ company.postalCode }}</td>
-                <td>{{ company.country }}</td>
-                <td>{{ company.description }}</td>
-                <td>{{ company.picture }}</td>
-                <td>{{ company.user.firstname }} {{ company.user.lastname }}</td>
-                {# <td>{{ company.commercial.name }}</td> #} 
-                <td>{{ company.isActive ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('backend_company_show', {'id': company.id}) }}">show</a>
-                    <a href="{{ path('backend_company_edit', {'id': company.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">Aucune donnée</td>
-            </tr>
-        {% endfor %}
         </tbody>
     </table>
+</div>
+
+<p class="text-left">
+    <a href="">retour</a>
+</p>
 
     {# <a href="{{ path('backend_user_new') }}">Create new</a> #}
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        $('#companyTable').DataTable({
+            language: {
+                url: '/json/fr_FR.json'
+            },
+            ajax: {
+                url: '/api/companies',
+                dataSrc: ''
+            },
+            columns: [
+                { data: 'id' },
+                { data: 'name' },
+                { data: 'firstAdressField' },
+                { data: 'secondAdressField' },
+                { data: 'postalCode' },
+                { data: 'city' },
+                { data: 'picture' },
+                { data: 'user' },
+                { data: 'commercial' },
+                { 
+                    data: 'isActive',
+                    render: function (data) {
+                        return (data === true) ? 'oui' : 'non'
+                    }
+                }
+            ]
+        })
+    </script>
 {% endblock %}
